# ros2_test

./: .travis.yml  sonar-project.properties
rclcpp/minimal_publisher/: CMakeLists.txt  lambda.cpp  member_function.cpp  sonar-project.properties
rclcpp/minimal_publisher/launch/: talk_listen.launch.py
rclcpp/minimal_subscriber/: CMakeLists.txt  package.xml  sonar-project.properties
rclcpp/minimal_subscriber/src/: lambda.cpp
rclcpp/minimal_subscriber/test/: test_subscriber.test.py
